// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanFeaturesHeader basic tests should not blow up 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <p
        class="plan-features__header-timeframe"
      >
        for life
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has discountPrice Full price should be rawPrice and discounted price should be discountPrice 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <span
        class="plan-features__header-price-group"
      >
        <div
          class="plan-features__header-price-group-prices"
        >
          <h4
            class="plan-price is-original"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              50
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
          <h4
            class="plan-price is-discounted"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              40
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
        </div>
      </span>
      <p
        class="plan-features__header-timeframe is-discounted"
      >
        Save %(discountPercent)s%% for 12 months!{{br/}} Per month, billed yearly.
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="More information"
          class="info-popover plan-features__header-tip-info"
          type="button"
        >
          <svg
            class="gridicon gridicons-info-outline needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-info-outline"
            />
          </svg>
        </button>
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has discountPrice Should return a single price (rawPrice) when availableForPurchase is false 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <h4
        class="plan-price"
      >
        <sup
          class="plan-price__currency-symbol"
        >
          $
        </sup>
        <span
          class="plan-price__integer"
        >
          50
        </span>
        <sup
          class="plan-price__fraction"
        />
      </h4>
      <p
        class="plan-features__header-timeframe is-discounted"
      >
        Save %(discountPercent)s%% for 12 months!{{br/}} Per month, billed yearly.
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="More information"
          class="info-popover plan-features__header-tip-info"
          type="button"
        >
          <svg
            class="gridicon gridicons-info-outline needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-info-outline"
            />
          </svg>
        </button>
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has discountPrice Should return crossed price when First Year Promotional discount is applied 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <span
        class="plan-features__header-price-group"
      >
        <div
          class="plan-features__header-price-group-prices"
        >
          <h4
            class="plan-price is-original"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              50
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
          <h4
            class="plan-price is-discounted"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              30
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
        </div>
      </span>
      <p
        class="plan-features__header-timeframe is-discounted"
      >
        Save %(discountPercent)s%% for 12 months!{{br/}} Per month, billed yearly.
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="More information"
          class="info-popover plan-features__header-tip-info"
          type="button"
        >
          <svg
            class="gridicon gridicons-info-outline needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-info-outline"
            />
          </svg>
        </button>
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has only rawPrice Full price should be rawPrice 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <h4
        class="plan-price"
      >
        <sup
          class="plan-price__currency-symbol"
        >
          $
        </sup>
        <span
          class="plan-price__integer"
        >
          50
        </span>
        <sup
          class="plan-price__fraction"
        />
      </h4>
      <p
        class="plan-features__header-timeframe"
      >
        yearly
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has only rawPrice Should behave in the same way when availableForPurchase is false 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <h4
        class="plan-price"
      >
        <sup
          class="plan-price__currency-symbol"
        >
          $
        </sup>
        <span
          class="plan-price__integer"
        >
          50
        </span>
        <sup
          class="plan-price__fraction"
        />
      </h4>
      <p
        class="plan-features__header-timeframe"
      >
        yearly
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has relatedMonthlyPlan Full price should be monthly price * 12 and discounted price should be discountPrice when it's passed 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <span
        class="plan-features__header-price-group"
      >
        <div
          class="plan-features__header-price-group-prices"
        >
          <h4
            class="plan-price is-original"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              60
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
          <h4
            class="plan-price is-discounted"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              30
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
        </div>
      </span>
      <p
        class="plan-features__header-timeframe is-discounted"
      >
        Save %(discountPercent)s%% for 12 months!{{br/}} Per month, billed yearly.
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="More information"
          class="info-popover plan-features__header-tip-info"
          type="button"
        >
          <svg
            class="gridicon gridicons-info-outline needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-info-outline"
            />
          </svg>
        </button>
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has relatedMonthlyPlan Full price should be monthly price * 12 and discounted price should be rawPrice when no discountPrice is passed 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <span
        class="plan-features__header-price-group"
      >
        <div
          class="plan-features__header-price-group-prices"
        >
          <h4
            class="plan-price is-original"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              60
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
          <h4
            class="plan-price is-discounted"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              50
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
        </div>
      </span>
      <p
        class="plan-features__header-timeframe"
      >
        yearly
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.getPlanFeaturesPrices() has relatedMonthlyPlan Should return a single price (rawPrice) when availableForPurchase is false 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <h4
        class="plan-price"
      >
        <sup
          class="plan-price__currency-symbol"
        >
          $
        </sup>
        <span
          class="plan-price__integer"
        >
          50
        </span>
        <sup
          class="plan-price__fraction"
        />
      </h4>
      <p
        class="plan-features__header-timeframe is-discounted"
      >
        Save %(discountPercent)s%% for 12 months!{{br/}} Per month, billed yearly.
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="More information"
          class="info-popover plan-features__header-tip-info"
          type="button"
        >
          <svg
            class="gridicon gridicons-info-outline needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-info-outline"
            />
          </svg>
        </button>
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.render() For free users Rendering annual plan should show monthly price * 12 discounted to discountPrice if one is passed 1`] = `
<div>
  <header
    class="plan-features__header is-premium-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-jetpack-premium"
        role="presentation"
        src="jetpack-bundles.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Premium
      </h4>
      <span
        class="plan-features__header-price-group"
      >
        <div
          class="plan-features__header-price-group-prices"
        >
          <h4
            class="plan-price is-original"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              108
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
          <h4
            class="plan-price is-discounted"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              60
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
        </div>
      </span>
      <p
        class="plan-features__header-timeframe is-discounted"
      >
        yearly
      </p>
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.render() For free users Rendering annual plan should show monthly price * 12 discounted to regular price if there's no discountPrice 1`] = `
<div>
  <header
    class="plan-features__header is-premium-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-jetpack-premium"
        role="presentation"
        src="jetpack-bundles.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Premium
      </h4>
      <span
        class="plan-features__header-price-group"
      >
        <div
          class="plan-features__header-price-group-prices"
        >
          <h4
            class="plan-price is-original"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              108
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
          <h4
            class="plan-price is-discounted"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              9
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
        </div>
      </span>
      <p
        class="plan-features__header-timeframe"
      >
        yearly
      </p>
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.render() For free users Rendering annual plan should show rawPrice with no discounts if there's no discountPrice and relatedMonthlyPlan 1`] = `
<div>
  <header
    class="plan-features__header is-premium-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-jetpack-premium"
        role="presentation"
        src="jetpack-bundles.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Premium
      </h4>
      <h4
        class="plan-price"
      >
        <sup
          class="plan-price__currency-symbol"
        >
          $
        </sup>
        <span
          class="plan-price__integer"
        >
          60
        </span>
        <sup
          class="plan-price__fraction"
        />
      </h4>
      <p
        class="plan-features__header-timeframe"
      >
        yearly
      </p>
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.render() For free users Rendering monthly plan should yield no discount if there's no discountPrice 1`] = `
<div>
  <header
    class="plan-features__header is-premium-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-jetpack-premium"
        role="presentation"
        src="jetpack-bundles.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Premium
      </h4>
      <h4
        class="plan-price"
      >
        <sup
          class="plan-price__currency-symbol"
        >
          $
        </sup>
        <span
          class="plan-price__integer"
        >
          9
        </span>
        <sup
          class="plan-price__fraction"
        />
      </h4>
      <p
        class="plan-features__header-timeframe"
      >
        monthly
      </p>
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.renderPriceGroup() Should return a single, not discounted price when a single price is passed 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <h4
        class="plan-price"
      >
        <sup
          class="plan-price__currency-symbol"
        >
          $
        </sup>
        <span
          class="plan-price__integer"
        >
          15
        </span>
        <sup
          class="plan-price__fraction"
        />
      </h4>
      <p
        class="plan-features__header-timeframe"
      >
        for life
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;

exports[`PlanFeaturesHeader.renderPriceGroup() Should return two prices when two numbers are passed: one original and one discounted 1`] = `
<div>
  <header
    class="plan-features__header is-free-plan"
  >
    <div
      class="plan-features__header-figure"
    >
      <img
        alt=""
        class="product-icon is-wpcom-free"
        role="presentation"
        src="wpcom-free.svg"
      />
    </div>
    <div
      class="plan-features__header-text"
    >
      <h4
        class="plan-features__header-title"
      >
        Free
      </h4>
      <span
        class="plan-features__header-price-group"
      >
        <div
          class="plan-features__header-price-group-prices"
        >
          <h4
            class="plan-price is-original"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              15
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
          <h4
            class="plan-price is-discounted"
          >
            <sup
              class="plan-price__currency-symbol"
            >
              $
            </sup>
            <span
              class="plan-price__integer"
            >
              12
            </span>
            <sup
              class="plan-price__fraction"
            />
            <span
              class="plan-price__term"
            >
              per
              <br />
              month
            </span>
          </h4>
        </div>
      </span>
      <p
        class="plan-features__header-timeframe is-discounted"
      >
        Save %(discountPercent)s%% for 12 months!{{br/}} Per month, billed yearly.
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="More information"
          class="info-popover plan-features__header-tip-info"
          type="button"
        >
          <svg
            class="gridicon gridicons-info-outline needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-info-outline"
            />
          </svg>
        </button>
      </p>
    </div>
    <div
      class="plan-pill"
    >
      Your Plan
    </div>
  </header>
</div>
`;
